# meikiocr

./: .gitignore  README.md  demo.py  meiki_ocr.py  pyproject.toml  requirements.txt
meikiocr/: __init__.py  cli.py  ocr.py
